--- a/.github/workflows/update_project_groups.yml
+++ b/.github/workflows/update_project_groups.yml
@@ -24,7 +24,7 @@ jobs:
         python-version: '3.8'
     - name: Install dependencies
       run: |
-        pip install pandas sqlalchemy psycopg2-binary networkx itertools collections
+        pip install pandas sqlalchemy psycopg2-binary networkx collections
     - name: Execute Python script
       run: python automations/update_project_groups.py
 
