--- a/.github/workflows/update_indexer_schema.yml
+++ b/.github/workflows/update_indexer_schema.yml
@@ -28,7 +28,8 @@ jobs:
         python-version: '3.8'
     - name: Install dependencies
       run: |
-        pip install pandas sqlalchemy psycopg2-binary  
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Execute Python script
       run: python automations/update_indexer_schema.py
 
