--- a/.github/workflows/update_indexer_schema copy.yml
+++ b/.github/workflows/update_indexer_schema copy.yml
@@ -32,5 +32,6 @@ jobs:
         pip install -r requirements.txt
     - name: Execute Python script
       run: python automations/update_local_indexer_tables.py
+      timeout-minutes: 30
 
 
