update matview creation

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ __pycache__/
 *.pyc
 automations/regendata-ingestor-ac8b2979b4c0.json
 automations/grantsdb_credentials.json
+codebase.md
+.aidigestignore
