--- a/.github/workflows/update_all_donations_matview.yml
+++ b/.github/workflows/update_all_donations_matview.yml
@@ -26,5 +26,6 @@ jobs:
         pip install pandas sqlalchemy psycopg2-binary  
     - name: Execute Python script
       run: python automations/update_all_donations_matview.py
+      timeout-minutes: 55
 
 
