--- a/.github/workflows/update_all_donations_matview.yml
+++ b/.github/workflows/update_all_donations_matview.yml
@@ -9,6 +9,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_Port }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      INDEXER_DB_HOST: ${{ secrets.INDEXER_DB_HOST }}
+      INDEXER_DB_PORT: ${{ secrets.INDEXER_DB_PORT }}
+      INDEXER_DB_NAME: ${{ secrets.INDEXER_DB_NAME }}
+      INDEXER_DB_USER: ${{ secrets.INDEXER_DB_USER }}
+      INDEXER_DB_PASSWORD: ${{ secrets.INDEXER_DB_PASSWORD }}
     timeout-minutes: 60  # Extend timeout as necessary
 
     steps:
