--- a/.github/workflows/upload_non_gs_allo_data_from_sheet.yml
+++ b/.github/workflows/upload_non_gs_allo_data_from_sheet.yml
@@ -24,7 +24,8 @@ jobs:
         python-version: '3.8'
     - name: Install dependencies
       run: |
-        pip install gspread pandas sqlalchemy oauth2client psycopg2-binary
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Execute Python script
       run: python automations/upload_non_gs_allo_data.py
 
