--- a/.github/workflows/update_local_indexer_tables.yml
+++ b/.github/workflows/update_local_indexer_tables.yml
@@ -1,4 +1,4 @@
-name: Update Local Indexer Tables
+name: Every 4 Hours (Local Indexer, Permissions, All Donations & All Matching)
 
 on:
   schedule:
@@ -31,11 +31,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Execute Python script
+    - name: Update Local Indexer Tables
       run: python automations/update_local_indexer_tables.py
       timeout-minutes: 55
     - name: Update Permissions
       run: python automations/create_foreign_data_users.py
+      timeout-minutes: 55
+    - name: Update All Donations & All Matching
+      run: python automations/update_all_donations_and_matching_matviews.py
       timeout-minutes: 55
 
 
