--- a/.github/workflows/every_four_hours.yml
+++ b/.github/workflows/every_four_hours.yml
@@ -37,8 +37,14 @@ jobs:
     - name: Update All Donations & All Matching
       run: python automations/update_all_donations_and_matching_matviews.py
       timeout-minutes: 55
+    - name: Refresh Dune Table
+      run: python automations/refresh_dune_table.py
+      timeout-minutes: 55
     - name: Update Allo Leaderboard
       run: python automations/refresh_allo_leaderboard.py
+      timeout-minutes: 55
+    - name: Upload Passport Model Scores
+      run: python automations/upload_passport_model_scores.py
       timeout-minutes: 55
     - name: Update Permissions
       run: python automations/create_foreign_data_users.py
