--- a/.github/workflows/refresh_dune_table.yml
+++ b/.github/workflows/refresh_dune_table.yml
@@ -11,6 +11,7 @@ jobs:
       DB_PORT: ${{ secrets.DB_PORT }}
       DB_USER: ${{ secrets.DB_USER }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DUNE_API_KEY: ${{ secrets.DUNE_API_KEY }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
