--- a/.github/workflows/refresh_allo_leaderboard.yml
+++ b/.github/workflows/refresh_allo_leaderboard.yml
@@ -11,6 +11,7 @@ jobs:
       DB_PORT: ${{ secrets.DB_PORT }}
       DB_USER: ${{ secrets.DB_USER }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_FDW_USERS: ${{ secrets.DB_FDW_USERS }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
