--- a/.github/workflows/every_four_hours.yml
+++ b/.github/workflows/every_four_hours.yml
@@ -1,10 +1,14 @@
-name: Every 4 Hours (Local Indexer, Permissions, All Donations & All Matching)
+name: Every 4 Hours (Schema, Local Copies, Permissions, All Donations & All Matching)
 
 on:
   schedule:
     # Runs every four hours
     - cron:  '0 */4 * * *'
   workflow_dispatch:
+
+permissions:
+  contents: write  # Needed for committing back to the repo
+
 
 jobs:
   run-script:
@@ -19,8 +23,14 @@ jobs:
       INDEXER_DB_NAME: ${{ secrets.INDEXER_DB_NAME }}
       INDEXER_DB_USER: ${{ secrets.INDEXER_DB_USER }}
       INDEXER_DB_PASSWORD: ${{ secrets.INDEXER_DB_PASSWORD }}
-      DB_FDW_USERS: ${{ secrets.DB_FDW_USERS }}
-      DUNE_API_KEY: ${{ secrets.DUNE_API_KEY }}
+      MACI_DB_HOST: ${{ secrets.MACI_DB_HOST }}
+      MACI_DB_PORT: ${{ secrets.MACI_DB_PORT }}
+      MACI_DB_NAME: ${{ secrets.MACI_DB_NAME }}
+      MACI_DB_USER: ${{ secrets.MACI_DB_USER }}
+      MACI_DB_PASSWORD: ${{ secrets.MACI_DB_PASSWORD }}
+      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -32,6 +42,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Update Foreign Schema
+      run: python automations/update_foreign_schema.py
     - name: Update Local Indexer Tables
       run: python automations/update_local_indexer_tables.py
       timeout-minutes: 55
@@ -43,9 +55,6 @@ jobs:
       timeout-minutes: 55
     - name: Update Allo Leaderboard
       run: python automations/refresh_allo_leaderboard.py
-      timeout-minutes: 55
-    - name: Upload Passport Model Scores
-      run: python automations/upload_passport_model_scores.py
       timeout-minutes: 55
     - name: Update Permissions
       run: python automations/create_foreign_data_users.py
